src/objects/Assessment_Template__c.object
<CustomObject>
    <fields>
        <fullName>Country_ISO_Code__c</fullName>
        <description>2-lettered Country Code</description>
        <label>Country ISO Code</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <description>Country name</description>
        <label>Country Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger_Cargo__c</fullName>
        <description>Represents if the template is for Passangers ("P") or for Cargo ("C")</description>
        <label>Passenger/Cargo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Template_Code__c</fullName>
        <label>Template Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Assessment Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Template_Code__c</columns>
        <columns>Country_Name__c</columns>
        <columns>Country_ISO_Code__c</columns>
        <columns>Passenger_Cargo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assessment Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>